# PitchPredict

./: .gitignore  .python-version  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  test.py
PitchPredict/src/: evaluate.py
data/: .gitignore  features.txt  full_features.txt  raw_statcast_data.parquet.dvc  situational_only_features.txt
logs/Gausman, Kevin_deep/train/: events.out.tfevents.1746069274.nicos-macbook-3.local.44334.0.v2
logs/Gausman, Kevin_deep/validation/: events.out.tfevents.1746069302.nicos-macbook-3.local.44334.1.v2
notebooks/: clean.ipynb  data_cleaning.ipynb  data_loading.ipynb  dvc.yaml  eval.ipynb  featurize.ipynb  pca.ipynb  restarting.ipynb  single_player.ipynb  train.ipynb
src/: clean.py  evaluate.py  featurize.py  lstm_model.py  train.py
src/utils/: featurize_utils.py  lstm_model.py  train_utils.py  utils.py
