[project]
name = "pitchpredict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.59.0",
    "dvclive>=3.48.1",
    "ipykernel>=6.29.5",
    "nest-asyncio>=1.6.0",
    "pandas>=2.2.3",
    "polars>=1.20.0",
    "pyarrow>=19.0.0",
    "pybaseball>=2.2.7",
    "pybaseballstats>=0.0.5",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.18.0",
]
